# Oxford-Matplotlib-Theme

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo_phc_thesis_palette.py  pyproject.toml  requirements.txt
docs/: API_REFERENCE.md  MIGRATION_GUIDE.md
examples/: basic_usage.py  clinical_ml.py  migration_comparison.py  publication_figures.py
oxford_matplotlib_theme/: __init__.py  colors.py  presets.py  styles.py  utils.py
tests/: test_colors.py  test_export.py  test_presets.py  test_styles.py
