[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oxford_matplotlib_theme"
version = "1.0.0"
description = "Matplotlib visualization theme following Official Oxford University colors and styling."
authors = [{ name="Sami Adnan", email="sami.adnan@phc.ox.ac.uk" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["oxford", "matplotlib", "theme", "visualization", "plotting", "academic", "publication"]

dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
examples = [
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]
all = [
    "oxford_matplotlib_theme[dev,examples]",
]

[project.urls]
Homepage = "https://github.com/sami5001/oxford-matplotlib-theme"
Documentation = "https://github.com/sami5001/oxford-matplotlib-theme#readme"
Repository = "https://github.com/sami5001/oxford-matplotlib-theme"
Issues = "https://github.com/sami5001/oxford-matplotlib-theme/issues"

[tool.setuptools]
packages = ["oxford_matplotlib_theme"]

[tool.setuptools.package-data]
oxford_matplotlib_theme = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
